<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference
		android:key="@string/im_settings_key"
		android:icon="@drawable/material_settings"
		android:title="@string/im_settings_title"
		android:summary="@string/im_settings_summary"
	/>
	<Preference
		android:key="@string/im_picker_key"
		android:icon="@drawable/material_keyboard"
		android:title="@string/im_picker_title"
		android:summary="@string/im_picker_summary"
	/>
	<ListPreference
		android:key="@string/night_mode_key"
		android:icon="@drawable/material_brightness_6"
		android:title="@string/night_mode_title"
		android:entries="@array/night_mode_entries"
	/>
	<EditTextPreference
		android:key="@string/kb_height_key"
		android:icon="@drawable/material_height"
		android:title="@string/kb_height_title"
		android:inputType="number"
	/>
</PreferenceScreen>
